fix(Toast): Increase z-index

--- a/src/toast-notification/classes.scss
+++ b/src/toast-notification/classes.scss
@@ -17,7 +17,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  z-index: 1070;
+  z-index: 50000;
 
   @media screen and (max-width: 400px) {
     width: calc(100vw - 36px);
